reorgatnition fonctionnelle de l'inscrription